Faculty Member Improved with remaining functionalities